--- a/index.html
+++ b/index.html
@@ -43,7 +43,35 @@
                 <li>Identified ticketing management solution which led to a queue reduction of 18%.</li>
             </ul>
         </ul>    
-        <hr />
+    <hr />
+        <h2>EDUCATION</h2>
+        <ul>
+            <h3>University of Toledo | Computer science and Engineering</h3>
+
+            <a>• Toledo, Ohio | Expected December 2024</a> <br />
+            <ul>
+                <li>•	International Rockets school scholarship: of $8000/year</li>
+                <li>•	Related coursework: Software Engineering, Database Management Systems, Linear Data Structure, Nonlinear Data Structure, Computer Architecture and Organization, Digital Logic Design</li>
+            </ul>
+        </ul>
+    <hr />
+    <h2>PROJECT</h2>
+        <ul>
+            <h3>Avalon QuickStart: A Board Game Accelerator</h3>
+                <ul>
+                    <li>Created a video game to help players speed up the Avalon board game by streamlining setup and reducing gameplay time.</li>
+                    <li>Utilized Unity game engine, C# programming language, and Adobe Photoshop for design.</li>
+                </ul>
+        </ul>
+        <ul>
+            <h3>Quiz App – Flutter</h3>
+                <ul>
+                    <li>Developed a simple quiz app using Flutter and Dart programming language that allows users to test their knowledge on various topics.</li>
+                    <li>Built user authentication, quiz questions, score tracking, and implemented Firebase for data storage.</li>
+                </ul>
+        </ul>
+
+
         
 </body>
 </html>
