--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>My Resume</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <h1>CV Dinh</h1>
-    <a>Toledo, OH | Cdinh@rockets.utoledo.edu | 419-320-6544 | www.linkedin.com/in/cuongdinh-03022001/</a>
+    <a>Toledo, OH | Cdinh@rockets.utoledo.edu | 419-320-6544 | </a>
+    <a href="www.linkedin.com/in/cuongdinh-03022001/">www.linkedin.com/in/cuongdinh-03022001</a>
+    <a>|</a>
+    <a href="https://github.com/CV-Dinh">https://github.com/CV-Dinh</a>
     <hr />
     <h2>SKILL</h2>
     <ul>
-        <li>Best experienced with C++, C#, SQL, Unity.</li>
+        <li>Best experienced with C++, C#, HTML, CSS, SQL, Unity.</li>
         <li>Experienced in developing mobile applications using Flutter.</li>
         <li>Strong understanding of software development principles, algorithms, and data structures.</li>
         <li>Proficient in using Microsoft Office tools, including Word, Excel, PowerPoint, and Outlook.</li>
@@ -20,10 +24,10 @@
     <hr />
 
         <h2>PROFESSIONAL EXPERIENCE</h2>
+            <a>College of Business and Innovation | </a> 
+            <a>IT Support</a>
+            <p>• Toledo, Ohio| July 2021 - Current</p> 
         <ul>
-            <h3>College of Business and Innovation | IT Support</h3>
-
-            <a>• Toledo, Ohio| July 2021 - Current</a> <br />
             <ul>
                 <li>Provide first-response technical assistance to College of Business and Innovation students and faculty.</li>
                 <li>Troubleshooting system and network problems, diagnosing, researching, and resolving hardware or software faults.</li>
@@ -31,10 +35,10 @@
             </ul>
         </ul>
     
+        
+            <p>OnPoint Group LLC, | IT Support <p>
+            <p>• Perrysburg, Ohio | August 2021 - April 2022</p> 
         <ul>
-            <h3>OnPoint Group LLC, | IT Support </h3>
-
-            <a>• Perrysburg, Ohio | August 2021 - April 2022</a> <br />
             <ul>
                 <li>Talking staff or clients through a series of actions, either face-to-face or over the telephone, to help set up systems or resolve issues.</li>
                 <li>Assisted IT, manager, as liaison to clients on software updates, reducing workload by 49%.</li>
