--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
             <a>• Toledo, Ohio | Expected December 2024</a> <br />
             <ul>
-                <li>•	International Rockets school scholarship: of $8000/year</li>
-                <li>•	Related coursework: Software Engineering, Database Management Systems, Linear Data Structure, Nonlinear Data Structure, Computer Architecture and Organization, Digital Logic Design</li>
+                <li>International Rockets school scholarship: of $8000/year</li>
+                <li>Related coursework: Software Engineering, Database Management Systems, Linear Data Structure, Nonlinear Data Structure, Computer Architecture and Organization, Digital Logic Design</li>
             </ul>
         </ul>
     <hr />
