--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="www.linkedin.com/in/cuongdinh-03022001/">www.linkedin.com/in/cuongdinh-03022001</a>
     <a>|</a>
     <a href="https://github.com/CV-Dinh">https://github.com/CV-Dinh</a>
+    <a>|</a>
+    <a href="https://cv-dinh.github.io/MyWebsite/">My Website</a>
     <hr />
     <h2>SKILL</h2>
     <ul>
@@ -64,6 +66,14 @@
     <hr />
     <h2>PROJECT</h2>
         <ul>
+            <h3>Personal Website</h3>
+                <ul>
+                    <li>Create a website from using HTML, CSS and JavaScript that highlight my skill some of my other projects.</li>
+                    <li>Write or gather high-quality content, including a compelling bio, resume, portfolio items, blog posts, and any other relevant information</li>
+                    <li>Thoroughly evaluate the website across different browsers and devices to ensure it functions correctly and looks good.</li>
+                </ul>
+        </ul>
+        <ul>
             <h3>Avalon QuickStart: A Board Game Accelerator</h3>
                 <ul>
                     <li>Created a video game to help players speed up the Avalon board game by streamlining setup and reducing gameplay time.</li>
@@ -72,6 +82,7 @@
         </ul>
         <ul>
             <h3>Quiz App – Flutter</h3>
+
                 <ul>
                     <li>Developed a simple quiz app using Flutter and Dart programming language that allows users to test their knowledge on various topics.</li>
                     <li>Built user authentication, quiz questions, score tracking, and implemented Firebase for data storage.</li>
